# tutwithus-ai-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.rst  init_mongodb_collections.py  pyproject.toml
src/api/: Apexchat_api.py
src/models/: __init__.py  database.py
src/utils/: Mongodb_tools.py  config.py  llm_tools.py
src/utils/apexchat/core/: llm.py  log_stream.py  logging.py  mongodb.py  sessions.py  status_stream.py  workflow.py
src/utils/apexchat/core/memory/: __init__.py  embedding_wrapper.py  fact_processor.py  memory_integration.py  memory_manager.py  memory_retrieval.py
src/utils/apexchat/middleware/: request_id.py
src/utils/apexchat/rag_system/: __init__.py  document_store.py  synthesiser.py
src/utils/apexchat/schemas/: models.py
src/utils/apexchat/tools/: __init__.py  general.py  memory_recall.py  navigation.py  rag.py  rescheduling.py  web_search.py
src/utils/apexchat/tools/booking/: __init__.py  contract.py  errors.py  extractor.py  machine.py  matching.py  multi_extractor.py  presenters.py  services.py  steps.py  tool.py  validators.py
src/utils/apexchat/tools/data_viz/: mongo_vanna.py  tool.py  training.py
