[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Apexchat-ENGINES"
version = "0.0.1"
description = "Apexchat-ENGINES"
readme = "README.rst"
authors = [
    {name = "Valoores LLC", email = "support@valoores.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial Institutes",
    "Programming Language :: Python :: 3.11",
    "Topic :: Finance/Banking :: AML"
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "fastapi==0.116.1",
    "httpx>=0.28.0",
    "langchain-core>=0.3.86",
    "langchain-ollama==0.3.6",
    "langchain-openai==0.3.30",
    "langgraph==0.6.7",
    "motor==3.5.1",
    "numpy==2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic==2.11.7",
    "pymongo==4.8.0",
    "python-dotenv==1.2.1",
    "structlog>=25.5.0",
    "tenacity>=9.1.0",
    "typing-extensions>=4.15.0",
    "uvicorn==0.35.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true
